src/parser/snapshots/expr/bitwise/bitwise_shift_parens.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions with correct precedence
expression: actual.unwrap()
info: (1 << 2) >> 3
---
location:
  line: 1
  column: 2
kind:
  binary:
    - right_shift
    - location:
        line: 1
        column: 2
      kind:
        binary:
          - left_shift
          - location:
              line: 1
              column: 2
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 7
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 13
      kind:
        int_constant:
          - "3"
          - decimal
