src/parser/snapshots/expr/bitwise/right_shift_is_left_associative.snap
---
source: src/parser/parser.rs
description: bitwise operator expressions with correct associativity
expression: actual.unwrap()
info: 200>>1>>1
---
location:
  line: 1
  column: 1
kind:
  binary:
    - right_shift
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - right_shift
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "200"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "1"
                - decimal
    - location:
        line: 1
        column: 9
      kind:
        int_constant:
          - "1"
          - decimal
